chore(ai): avoid line wrap in code response parts
Line wrapping lead to cut off code. Instead, we now never wrap and show a horizontal bar. Moreover, this change ensures that mouse wheel events aren't caught be the code parts but always continue scrolling the chat view.

--- a/packages/ai-chat-ui/src/browser/style/index.css
+++ b/packages/ai-chat-ui/src/browser/style/index.css
@@ -125,6 +125,7 @@ div:last-child > .theia-ChatNode {
 
 .theia-ChatNode .theia-CodeWrapper {
   padding: 0.5em;
+  padding-bottom: 0;
   background-color: var(--theia-editor-background);
   border-radius: 6px;
   border: var(--theia-border-width) solid var(--theia-checkbox-border);
